adding the ensure compiler plugin